--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "boom": "^7.1.1",
+    "cloudinary": "^1.9.1",
     "handlebars": "^4.0.11",
     "hapi": "^16.6.2",
     "hapi-auth-cookie": "^7.0.0",
     "hapi-auth-jwt2": "^7.3.0",
     "hapi-cors-headers": "^1.0.3",
+    "hapi-uploader": "^0.2.0",
     "inert": "^4.2.1",
-    "joi": "^13.0.1",
+    "joi": "^13.0.2",
     "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.13.0",
@@ -26,7 +28,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^4.0.1",
+    "mocha": "^4.1.0",
     "sync-request": "^4.1.0"
   },
   "repository": {
